messing about with streaming

--- a/app/pages/dashboard/template.njk
+++ b/app/pages/dashboard/template.njk
@@ -11,6 +11,8 @@
       {{ errorSummary(errors) }}
     {% endif %}  
 
+    <a download="nhsmail" href="http://localhost:3002/download">download</a>
+
     <h1>Marketing Page - Dashboard</h1>
     <div data-test-id="dashboard-preview-button">
       {{ button({
